# bowtie

./: .codecov.yml  .dockerignore  .eslintrc.yml  .gitignore  .prettierrc.toml  .readthedocs.yml  .rtd-env.yml  .travis.yml  CHANGELOG.md  Dockerfile  Dockertravis  LICENSE  Makefile  README.md  README.rst  bowtie.ipynb  bowtie.sketch  environment.yml  example.py  flit.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  svg2ico.sh  test-requirements.txt
bowtie/: __init__.py  _app.py  _cache.py  _command.py  _compat.py  _component.py  _layout.py  _magic.py  _progress.py  _typing.py  _utils.py  auth.py  cache.py  compat.py  component.py  control.py  exceptions.py  html.py  layout.py  pager.py  visual.py
bowtie/feedback/: __init__.py  message.py
bowtie/src/: .babelrc  button.jsx  checkbox.jsx  datagrid.jsx  date.jsx  div.jsx  dropdown.jsx  fixedtable.jsx  griddle.jsx  header.jsx  link.jsx  markdown.jsx  nouislider.jsx  number.jsx  package.json  plotly.jsx  progress.jsx  radio.jsx  slider.jsx  svg.jsx  switch.jsx  table.jsx  textbox.jsx  upload.jsx  utils.js  view.jsx  webpack.config.js  webpack.dev.js  webpack.prod.js
conex/: __init__.py  compat.py  component.py  control.py  layout.py  purify.py  visual.py
doc/: Makefile  app.rst  architecture.rst  authentication.rst  cache.rst  comparison.rst  components.rst  conf.py  deploy.rst  docker.rst  environment.yml  exceptions.rst  feedback.rst  flask.rst  index.rst  indices.rst  jupyter.rst  layout.rst  newcomponents.rst  quickstart.rst  spelling_wordlist.txt
examples/: bowtie.ipynb  random_walk.py
(+47 files in other folders)
