[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "bowtie"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/bowtie"
description-file = "README.rst"
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.5",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7"
]
requires-python = ">=3.5"
requires = [
"click",
"eventlet",
"flask",
"flask-socketio",
"jinja2",
"markdown",
"msgpack"
]
keywords = "dashboard visualization interactive visualize"
